Add CLI load command